# minishell

./: .gitmodules  CMakeLists.txt  Makefile  README.md
includes/: minishell.h
src/: bi_cd.c  bi_echo.c  bi_set_unset_env.c  builtins.c  echo.c  entered_commands_check.c  env.c  env_commands.c  main.c  prompt.c
